fix: Minor Text Visibility fix

--- a/src/components/SwipeableButton.css
+++ b/src/components/SwipeableButton.css
@@ -78,7 +78,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  right: 5%;
+  right: 12%;
   height: 100%;
   text-align: center;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
